Responsive text updates

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -108,3 +108,19 @@ body {
   margin-bottom: 40px;
   width: 872px;
 }
+
+@media screen and (min-width: 601px) {
+  div.example {
+    font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  div.example {
+    font-size: 30px;
+  }
+}
+
+
+
+
